--- a/src/style.css
+++ b/src/style.css
@@ -11,4 +11,5 @@
   /* (Texto Negativo, inimigo em comum) */
   /* Textos e Parágrafos, usar preto, branco e a cor abaixo */
   --color-text3: #7cba10;
+  --color-border1: #7CBF1033;
 }
